[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-cascade-python-node"
version = "0.1.0"
description = "Minimal Python observability cascade holon."
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60.0",
  "grpcio-tools>=1.60.0",
  "grpcio-reflection>=1.60.0",
  "protobuf>=5.0.0",
  "pyyaml>=6.0",
  "websockets>=12.0",
]
