[package]
name = "relay-cascade-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cascade-node-rust = { path = "../cascade-node-rust" }
holons = { path = "../../../sdk/rust-holons" }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
tower-service = "0.3"
